# site-hakyll

./: .gitignore  Makefile  README.md  contact.md  index.md  organizers.md  plc-site.cabal  topics.md
contents/: 404.html  contact.md  for-authors.md  fuksman.md  index.md  invited-speakers-new.md  invited-speakers.md  junior.md  news.md  organizers.md  pc.md  registration.md  topics.md
css/: base.css  layout.css
files/: PLC-2017CfP.odt  Program_PLC_2017.rtf  Program_junior_PLC_2017.rtf  oplata_2017.docx
files/slides/day-1/: Handeliants.pptx
files/slides/days-2-3/: Bukerya.ppt  Faifel.ppt  Ibragimov.ppt  Kanatov.pptx  Kruchanenko.pptx  Lacis.ppt  Matkovsky.ppt  Petrenko.ppt  Zuev.pptx
src/: Main.hs
templates/: content.html  default.html
