Name:               plc-site
Version:            0.1.0.0
Synopsis:           Website for PLC-2017
Description:        Website for PLC-2017
Homepage:           http://plc.sfedu.ru
License:            AllRightsReserved
License-file:       LICENSE
Author:             MMCS
Maintainer:         plc.conf.2017@gmail.com
Category:           Web
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >= 1.8

Executable site
  Main-is:        Main.hs
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Build-depends:
    base      >= 4.6  && < 4.10,
    binary    >= 0.5  && < 0.9,
    directory >= 1.2  && < 1.4,
    system-filepath >= 0.4 && < 0.5,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.7  && < 4.10,
    pandoc    >= 1.14 && < 1.20,
    process   >= 1.1  && < 1.5,
    time      >= 1.5  && < 1.7

